More civic adjustments + job code replace

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -905,29 +905,29 @@
 	mod_job_tec_technocrat_per_pop_short:0 "\n§G+1§! £mod_job_tec_technocrat_add£ per $VALUE$ £pop£"
 	mod_job_tec_technocrat_add:0 "$job_tec_technocrat$ Jobs"
 
-	job_supervisor_bureaucrat:0 "Supervisor"
-	job_supervisor_bureaucrat_plural:0 "Supervisors"
-	job_supervisor_bureaucrat_desc:0 "Members of a strata of supervision rulers, charged with articulating and examining the very principles by which their society operates."
-	job_supervisor_bureaucrat_effect_desc:0 "£job_supervisor_bureaucrat£ $job_supervisor_bureaucrat_plural$ produce §Y$tec_loc_unity$§!, increase §Y$tec_loc_amenities$§! and multiply planetary §Y$mod_planet_jobs_unity_produces_mult$§!."
-	mod_job_supervisor_bureaucrat_add:0 "$job_supervisor_bureaucrat$ Jobs"
-	mod_job_supervisor_bureaucrat_per_pop:0 "§G+1§! $job_supervisor_bureaucrat$ Job per $VALUE$ Pops"
-	mod_job_supervisor_bureaucrat_per_pop_short:0 "\n§G+1§! £mod_job_supervisor_bureaucrat_add£ per $VALUE$ £pop£"
+	job_tec_supervisor_bureaucrat:0 "Supervisor"
+	job_tec_supervisor_bureaucrat_plural:0 "Supervisors"
+	job_tec_supervisor_bureaucrat_desc:0 "Members of a strata of supervision rulers, charged with articulating and examining the very principles by which their society operates."
+	job_tec_supervisor_bureaucrat_effect_desc:0 "£job_tec_supervisor_bureaucrat£ $job_tec_supervisor_bureaucrat_plural$ produce §Y$tec_loc_unity$§!, increase §Y$tec_loc_amenities$§! and multiply planetary §Y$mod_planet_jobs_unity_produces_mult$§!."
+	mod_job_tec_supervisor_bureaucrat_add:0 "$job_tec_supervisor_bureaucrat$ Jobs"
+	mod_job_tec_supervisor_bureaucrat_per_pop:0 "§G+1§! $job_tec_supervisor_bureaucrat$ Job per $VALUE$ Pops"
+	mod_job_tec_supervisor_bureaucrat_per_pop_short:0 "\n§G+1§! £mod_job_tec_supervisor_bureaucrat_add£ per $VALUE$ £pop£"
 
-	job_mogul:0 "Mogul"
-	job_mogul_plural:0 "Moguls"
-	job_mogul_desc:0 "A prominent and influential member of financial elite."
-	job_mogul_effect_desc:0 "£job_mogul£ $job_mogul_plural$ produce §Y$tec_loc_trade_value$§!, §Y$tec_loc_amenities$§!, and increases §Y$tec_loc_trade_value$§! by §G+5%§!."
-	mod_job_mogul_add:0 "$job_mogul$ Jobs"
-	mod_job_mogul_per_pop:0 "§G+1§! $job_mogul$ Job per $VALUE$ Pops"
-	mod_job_mogul_per_pop_short:0 "\n§G+1§! £mod_job_mogul_add£ per $VALUE$ £pop£"
+	job_tec_mogul:0 "tec_mogul"
+	job_tec_mogul_plural:0 "tec_moguls"
+	job_tec_mogul_desc:0 "A prominent and influential member of financial elite."
+	job_tec_mogul_effect_desc:0 "£job_tec_mogul£ $job_tec_mogul_plural$ produce §Y$tec_loc_trade_value$§!, §Y$tec_loc_amenities$§!, and increases §Y$tec_loc_trade_value$§! by §G+5%§!."
+	mod_job_tec_mogul_add:0 "$job_tec_mogul$ Jobs"
+	mod_job_tec_mogul_per_pop:0 "§G+1§! $job_tec_mogul$ Job per $VALUE$ Pops"
+	mod_job_tec_mogul_per_pop_short:0 "\n§G+1§! £mod_job_tec_mogul_add£ per $VALUE$ £pop£"
 
-	job_commandante:0 "Commander"
-	job_commandante_plural:0 "Commanders"
-	job_commandante_desc:0 "An experienced military chief, either active or honorably discharged."
-	job_commandante_effect_desc:0 "['concept_tec_ruler_job_commandante_plural_icon'] increase §Y$tec_loc_navalcap_from_jobs$§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
-	mod_job_commandante_add:0 "$job_commandante$ Jobs"
-	mod_job_commandante_per_pop:0 "§G+1§! $job_commandante$ Job per $VALUE$ Pops"
-	mod_job_commandante_pop_short:0 "\n§G+1§! £mod_job_commandante_add£ per $VALUE$ £pop£"
+	job_tec_commander:0 "Commander"
+	job_tec_commander_plural:0 "Commanders"
+	job_tec_commander_desc:0 "An experienced military chief, either active or honorably discharged."
+	job_tec_commander_effect_desc:0 "['concept_tec_ruler_job_tec_commander_plural_icon'] increase §Y$tec_loc_navalcap_from_jobs$§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
+	mod_job_tec_commander_add:0 "$job_tec_commander$ Jobs"
+	mod_job_tec_commander_per_pop:0 "§G+1§! $job_tec_commander$ Job per $VALUE$ Pops"
+	mod_job_tec_commander_pop_short:0 "\n§G+1§! £mod_job_tec_commander_add£ per $VALUE$ £pop£"
 
 	job_tec_master_tinker:0 "Master Tinker"
 	job_tec_master_tinker_plural:0 "Master Tinkers"
@@ -1183,33 +1183,33 @@
  # /
 
  # ------------------------------------------------- Specialist Regular (Generic)
-	job_mercenary:0 "Mercenary"
-	job_mercenary_plural:0 "Mercenaries"
-	job_mercenary_desc:0 "Professional and well trained soldiers, loyal to their paymaster."
-	job_mercenary_effect_desc:0 "£job_mercenary£ $job_mercenary_plural$ increase §Y$tec_loc_naval_cap$§!, spawn £defense_army£ §YDefense Armies§!, produce §Y$tec_loc_trade_value$§! and requires §YConsumer Goods§! for upkeep."
-	mod_job_mercenary_add:0 "$job_mercenary$ Jobs"
-	mod_job_mercenary_per_pop:0 "§G+1§! $job_mercenary$ Job per $VALUE$ Pops"
-	mod_job_mercenary_per_pop_short:0 "\n§G+1§! £mod_job_mercenary_add£ per $VALUE$ £pop£"
+	job_tec_mercenary:0 "Mercenary"
+	job_tec_mercenary_plural:0 "Mercenaries"
+	job_tec_mercenary_desc:0 "Professional and well trained soldiers, loyal to their paymaster."
+	job_tec_mercenary_effect_desc:0 "£job_tec_mercenary£ $job_tec_mercenary_plural$ increase §Y$tec_loc_naval_cap$§!, spawn £defense_army£ §YDefense Armies§!, produce §Y$tec_loc_trade_value$§! and requires §YConsumer Goods§! for upkeep."
+	mod_job_tec_mercenary_add:0 "$job_tec_mercenary$ Jobs"
+	mod_job_tec_mercenary_per_pop:0 "§G+1§! $job_tec_mercenary$ Job per $VALUE$ Pops"
+	mod_job_tec_mercenary_per_pop_short:0 "\n§G+1§! £mod_job_tec_mercenary_add£ per $VALUE$ £pop£"
 
 
  # /
 
  # ------------------------------------------------- Specialist Eco (Feature)
-	job_xenobiologist:0 "Xeno-biologist"
-	job_xenobiologist_plural:0 "Xeno-biologists"
-	job_xenobiologist_desc:0 "Specialized Scientists with the task of studying the flora and fauna of the planet."
-	job_xenobiologist_effect_desc:0 "£job_xenobiologist£ $job_xenobiologist_plural$ produce lots of §Y$tec_loc_society$§!."
-	mod_job_xenobiologist_add:0 "$job_xenobiologist$ Jobs"
-	mod_job_xenobiologist_per_pop:0 "§G+1§! $job_xenobiologist$ Job per $VALUE$ Pops"
-	mod_job_xenobiologist_per_pop_short:0 "\n§G+1§! £mod_job_xenobiologist_add£ per $VALUE$ £pop£"
+	job_tec_xenobiologist:0 "Xeno-biologist"
+	job_tec_xenobiologist_plural:0 "Xeno-biologists"
+	job_tec_xenobiologist_desc:0 "Specialized Scientists with the task of studying the flora and fauna of the planet."
+	job_tec_xenobiologist_effect_desc:0 "£job_tec_xenobiologist£ $job_tec_xenobiologist_plural$ produce lots of §Y$tec_loc_society$§!."
+	mod_job_tec_xenobiologist_add:0 "$job_tec_xenobiologist$ Jobs"
+	mod_job_tec_xenobiologist_per_pop:0 "§G+1§! $job_tec_xenobiologist$ Job per $VALUE$ Pops"
+	mod_job_tec_xenobiologist_per_pop_short:0 "\n§G+1§! £mod_job_tec_xenobiologist_add£ per $VALUE$ £pop£"
  
-	job_geoengineer:0 "Exo-Geologist"
-	job_geoengineer_plural:0 "Exo-Geologist"
-	job_geoengineer_desc:0 "Devotee scientists and geo-engineers dedicated to study and analyse the geology planetary bodies and any possible anomaly or rarities."
-	job_geoengineer_effect_desc:0 "£job_geoengineer£ $job_geoengineer_plural$ produce a fair amount of $tec_loc_physics$ and $tec_loc_engineering$."
-	mod_job_geoengineer_add:0 "$job_geoengineer$ Jobs"
-	mod_job_geoengineer_per_pop:0 "§G+1§! $job_geoengineer$ Job per $VALUE$ Pops"
-	mod_job_geoengineer_per_pop_short:0 "\n§G+1§! £mod_job_geoengineer_add£ per $VALUE$ £pop£"
+	job_tec_geoengineer:0 "Exo-Geologist"
+	job_tec_geoengineer_plural:0 "Exo-Geologist"
+	job_tec_geoengineer_desc:0 "Devotee scientists and geo-engineers dedicated to study and analyse the geology planetary bodies and any possible anomaly or rarities."
+	job_tec_geoengineer_effect_desc:0 "£job_tec_geoengineer£ $job_tec_geoengineer_plural$ produce a fair amount of $tec_loc_physics$ and $tec_loc_engineering$."
+	mod_job_tec_geoengineer_add:0 "$job_tec_geoengineer$ Jobs"
+	mod_job_tec_geoengineer_per_pop:0 "§G+1§! $job_tec_geoengineer$ Job per $VALUE$ Pops"
+	mod_job_tec_geoengineer_per_pop_short:0 "\n§G+1§! £mod_job_tec_geoengineer_add£ per $VALUE$ £pop£"
 
 	job_tec_druid:0 "Druid"
 	job_tec_druid_plural:0 "Druids"
@@ -1300,22 +1300,22 @@
  # /
 
  # ------------------------------------------------- Syndicalism (Job Add)
-	job_labour_hero:0 "Labour Hero"
-	job_labour_hero_plural:0 "Labour Heros"
-	job_labour_hero_desc:0 "An individual, recognized for his outstanding labour capabilities and capacities to lead others with respect and dignity."
-	job_labour_hero_effect_desc:0 "£job_labour_hero£ $job_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
-	mod_job_labour_hero_add:0 "$job_labour_hero$ Jobs"
-	mod_job_labour_hero_per_pop:0 "§G+1§! $job_labour_hero$ Job per $VALUE$ Pops"
-	mod_job_labour_hero_per_pop_short:0 "\n§G+1§! £mod_job_labour_hero_add£ per $VALUE$ £pop£"
+	job_tec_labour_hero:0 "Labour Hero"
+	job_tec_labour_hero_plural:0 "Labour Heros"
+	job_tec_labour_hero_desc:0 "An individual, recognized for his outstanding labour capabilities and capacities to lead others with respect and dignity."
+	job_tec_labour_hero_effect_desc:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
+	mod_job_tec_labour_hero_add:0 "$job_tec_labour_hero$ Jobs"
+	mod_job_tec_labour_hero_per_pop:0 "§G+1§! $job_tec_labour_hero$ Job per $VALUE$ Pops"
+	mod_job_tec_labour_hero_per_pop_short:0 "\n§G+1§! £mod_job_tec_labour_hero_add£ per $VALUE$ £pop£"
  # /
- # ------------------------------------------------- Transcends (Job Add)
-	job_transcend:0 "Transcendent"
-	job_transcend_plural:0 "Transcendents"
-	job_transcend_desc:0 "These individuals are considered to have reached an illuminated state of consciousness."
-	job_transcend_effect_desc:0 "£job_transcend£ $job_transcend_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
-	mod_job_transcend_add:0 "$job_transcend$ Jobs"
-	mod_job_transcend_per_pop:0 "§G+1§! $job_transcend$ Job per $VALUE$ Pops"
-	mod_job_transcend_per_pop_short:0 "\n§G+1§! £mod_job_transcend_add£ per $VALUE$ £pop£"
+ # ------------------------------------------------- Transcendents (Job Add)
+	job_tec_transcendent:0 "Transcendent"
+	job_tec_transcendent_plural:0 "Transcendents"
+	job_tec_transcendent_desc:0 "These individuals are considered to have reached an illuminated state of consciousness."
+	job_tec_transcendent_effect_desc:0 "£job_tec_transcendent£ $job_tec_transcendent_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
+	mod_job_tec_transcendent_add:0 "$job_tec_transcendent$ Jobs"
+	mod_job_tec_transcendent_per_pop:0 "§G+1§! $job_tec_transcendent$ Job per $VALUE$ Pops"
+	mod_job_tec_transcendent_per_pop_short:0 "\n§G+1§! £mod_job_tec_transcendent_add£ per $VALUE$ £pop£"
  # /
 
  # ------------------------------------------------- Flagship representatives
@@ -1768,16 +1768,16 @@
 	building_tec_eco_engineers_terrasculptor_2_desc:0 "TO DO."
  # /
  # Gene blabla
-	building_tec_evolutionary_lab_1:0 ""
-	building_tec_evolutionary_lab_1_plural:0 ""
+	building_tec_evolutionary_lab_1:0 "Evolutionary Lab"
+	building_tec_evolutionary_lab_1_plural:0 "Evolutionary Labs"
 	building_tec_evolutionary_lab_1_desc:0 ""
 
-	building_tec_evolutionary_lab_2:0 ""
-	building_tec_evolutionary_lab_2_plural:0 ""
+	building_tec_evolutionary_lab_2:0 "Evolutionary Compound"
+	building_tec_evolutionary_lab_2_plural:0 "Evolutionary Compounds"
 	building_tec_evolutionary_lab_2_desc:0 ""
 
-	building_tec_evolutionary_lab_3:0 ""
-	building_tec_evolutionary_lab_3_plural:0 ""
+	building_tec_evolutionary_lab_3:0 "Evolutionary Institution"
+	building_tec_evolutionary_lab_3_plural:0 "Evolutionary Institutions"
 	building_tec_evolutionary_lab_3_desc:0 ""
 
 	job_tec_geneticist:0 "Geneticist"
@@ -1856,6 +1856,18 @@
 		building_tec_epigenetic_chambers:0 "Epigenetic Chambers"
 		building_tec_epigenetic_chambers_plural:0 "$building_tec_epigenetic_chambers$"
 		building_tec_epigenetic_chambers_desc:0 "TO DO."
+ # /
+ # Labrats
+	job_tec_labrat:0 "Test Subject"
+	job_tec_labrat_plural: "Test Subjects"
+	job_tec_labrat_desc:0 ""
+	job_tec_labrat_effect_desc:0 ""
+	mod_job_tec_labrat_add:0 ""
+ # /
+ # Biohive
+		building_tec_bio_reclamation_pool_1:0 "Reclamation Pool"
+		building_tec_bio_reclamation_pool_1_plural:0 "$building_tec_bio_reclamation_pool_1$s"
+		building_tec_bio_reclamation_pool_1_desc:0 "TO DO."
  # /
 # /
 
@@ -3723,11 +3735,6 @@
 	job_tec_mentat_priest_effect_desc:0 ""
 	mod_job_tec_mentat_priest_add:0 ""
 
-	job_tec_labrat:0 ""
-	job_tec_labrat_plural: ""
-	job_tec_labrat_desc:0 ""
-	job_tec_labrat_effect_desc:0 ""
-	mod_job_tec_labrat_add:0 ""
 
 	job_tec_diversifier:0 ""
 	job_tec_diversifier_plural: ""
