--- a/localisation/english/zz_evolved_categories_l_english.yml
+++ b/localisation/english/zz_evolved_categories_l_english.yml
@@ -63,7 +63,7 @@
  planet_colonists: "$job_colonist_plural$"
  planet_tec_trade_drones: "$job_tec_trade_drone_plural$"
  planet_tec_labour_heroes: "$job_labour_hero_plural$"
- planet_tec_transcends: "$job_transcend_plural$"
+ planet_tec_transcendents: "$job_tec_transcendent_plural$"
  planet_tec_occultists: "$job_tec_minor_occultist_plural$"
  planet_tec_batteries: "$job_organic_battery_plural$"
  planet_tec_druids: "$job_tec_druid_plural$"
