--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -67,6 +67,7 @@
 	tec_loc_c_initial_pick:0 "§EInitial pick bonus:§!"
 
 	tec_loc_c_restriction:0 "§ERestriction:§!"
+	tec_loc_c_gameplay_alteration:0 "§EGameplay Alteration:§!"
 
 	tec_loc_c_warning:0 "§E£trigger_tec_warning£ Warning:§!"
 
@@ -110,6 +111,12 @@
 	concept_tec_job_alteration_civic_entertainer: "$concept_tec_job_alteration_civic$ ($job_entertainer$)"
 	concept_tec_job_alteration_civics_entertainer: "$concept_tec_job_alteration_civics$ ($job_entertainer$)"
 	
+	concept_tec_job_addition_civic: "Job Addition Civic"
+	concept_tec_job_addition_civics: "Job Addition Civics"
+	concept_tec_job_addition_civic_desc: "Job addition civics provide a strong-themed job independently of other types of jobs, but generally tied to a specific category (such as researchers, bureaucrats, etc). Generally these civics are not mutually incompatible."
+	concept_tec_job_addition_civic_researcher: "$concept_tec_job_addition_civic$ ($job_researcher$)"
+	concept_tec_job_addition_civics_researcher: "$concept_tec_job_addition_civics$ ($job_researcher$)"
+
 	concept_tec_basic_civic: "Basic Civic"
 	concept_tec_basic_civics: "Basic Civics"
 	concept_tec_basic_civic_desc: "Basic civics provide some flavour, modifiers or mini mechanics not explicitly tied to an specific category. They are more freely available and serve as good addition for flexible empire builds."
@@ -307,19 +314,19 @@
 	concept_tec_ruler_job_tec_ai_high_ordinator_megacorp_desc: "§L$job_tec_ai_high_ordinator_desc$§!\n\n$job_tec_ai_high_ordinator_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+5§!\n$tec_loc_trade_value$: §G+6§!\nProduces: §Y£unity£ 5 £sr_tec_ai_power£ 5§!\nUpkeep: §Y£consumer_goods£ 2§!"
 	# /
  # Ruler
-	concept_tec_ruler_job_commandante: "$job_commandante$"
-	concept_tec_ruler_job_commandante_alias: "$job_commandante$"
-	concept_tec_ruler_job_commandante_icon: "£job_commandante£ $job_commandante$"
-	concept_tec_ruler_job_commandante_plural: "$job_commandante_plural$"
-	concept_tec_ruler_job_commandante_plural_icon: "£job_commandante£ $job_commandante_plural$"
-	concept_tec_ruler_job_commandante_desc: "§L$job_commandante_desc$§!\n\n$job_commandante_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$mod_pop_job_naval_mult$: §G+2.5%§!\n$tec_loc_naval_cap$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_defense_armies$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_commander: "$job_tec_commander$"
+	concept_tec_ruler_job_tec_commander_alias: "$job_tec_commander$"
+	concept_tec_ruler_job_tec_commander_icon: "£job_tec_commander£ $job_tec_commander$"
+	concept_tec_ruler_job_tec_commander_plural: "$job_tec_commander_plural$"
+	concept_tec_ruler_job_tec_commander_plural_icon: "£job_tec_commander£ $job_tec_commander_plural$"
+	concept_tec_ruler_job_tec_commander_desc: "§L$job_tec_commander_desc$§!\n\n$job_tec_commander_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$mod_pop_job_naval_mult$: §G+2.5%§!\n$tec_loc_naval_cap$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_defense_armies$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
-	concept_tec_ruler_job_supervisor_bureaucrat: "$job_supervisor_bureaucrat$"
-	concept_tec_ruler_job_supervisor_bureaucrat_alias: "$job_supervisor_bureaucrat$"
-	concept_tec_ruler_job_supervisor_bureaucrat_icon: "£job_supervisor_bureaucrat£ $job_supervisor_bureaucrat$"
-	concept_tec_ruler_job_supervisor_bureaucrat_plural: "$job_supervisor_bureaucrat_plural$"
-	concept_tec_ruler_job_supervisor_bureaucrat_plural_icon: "£job_supervisor_bureaucrat£ $job_supervisor_bureaucrat_plural$"
-	concept_tec_ruler_job_supervisor_bureaucrat_desc: "§L$job_supervisor_bureaucrat_desc$§!\n\n$job_supervisor_bureaucrat_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+6§!\n$mod_planet_jobs_unity_produces_mult$: §G+2.5%§!\n$tec_loc_stability$: §G+2§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat: "$job_tec_supervisor_bureaucrat$"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat_alias: "$job_tec_supervisor_bureaucrat$"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat_icon: "£job_tec_supervisor_bureaucrat£ $job_tec_supervisor_bureaucrat$"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat_plural: "$job_tec_supervisor_bureaucrat_plural$"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat_plural_icon: "£job_tec_supervisor_bureaucrat£ $job_tec_supervisor_bureaucrat_plural$"
+	concept_tec_ruler_job_tec_supervisor_bureaucrat_desc: "§L$job_tec_supervisor_bureaucrat_desc$§!\n\n$job_tec_supervisor_bureaucrat_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+6§!\n$mod_planet_jobs_unity_produces_mult$: §G+2.5%§!\n$tec_loc_stability$: §G+2§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	concept_tec_ruler_job_tec_grand_archivist: "$job_tec_grand_archivist$"
 	concept_tec_ruler_job_tec_grand_archivist_alias: "$job_tec_grand_archivist$"
@@ -363,12 +370,12 @@
 	concept_tec_ruler_job_merchant_plural_icon: "£job_merchant£ $job_merchant_plural$"
 	concept_tec_ruler_job_merchant_desc: "§L$job_merchantr_desc$§!\n\n$job_merchant_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+12§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
-	concept_tec_ruler_job_mogul: "$job_mogul$"
-	concept_tec_ruler_job_mogul_alias: "$job_mogul$"
-	concept_tec_ruler_job_mogul_icon: "£job_mogul£ $job_mogul$"
-	concept_tec_ruler_job_mogul_plural: "$job_mogul_plural$"
-	concept_tec_ruler_job_mogul_plural_icon: "£job_mogul£ $job_mogul_plural$"
-	concept_tec_ruler_job_mogul_desc: "§L$job_mogul_desc$§!\n\n$job_mogul_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+8§!\n$MOD_TRADE_VALUE_MULT$: §G+2.5%§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_mogul: "$job_tec_mogul$"
+	concept_tec_ruler_job_tec_mogul_alias: "$job_tec_mogul$"
+	concept_tec_ruler_job_tec_mogul_icon: "£job_tec_mogul£ $job_tec_mogul$"
+	concept_tec_ruler_job_tec_mogul_plural: "$job_tec_mogul_plural$"
+	concept_tec_ruler_job_tec_mogul_plural_icon: "£job_tec_mogul£ $job_tec_mogul_plural$"
+	concept_tec_ruler_job_tec_mogul_desc: "§L$job_tec_mogul_desc$§!\n\n$job_tec_mogul_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+8§!\n$MOD_TRADE_VALUE_MULT$: §G+2.5%§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	concept_tec_ruler_job_tec_master_tinker: "$job_tec_master_tinker$"
 	concept_tec_ruler_job_tec_master_tinker_alias: "$job_tec_master_tinker$"
@@ -490,6 +497,21 @@
 	concept_tec_specialist_job_tec_scavenger_plural_icon: "£job_tec_scavenger£ $job_tec_scavenger_plural$"
 	concept_tec_specialist_job_tec_scavenger_desc: "§L$job_tec_scavenger_desc$§!\n\n$job_tec_scavenger_effect_desc_civic$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_catalytic_technician: "$job_catalytic_technician$"
+	concept_tec_specialist_job_catalytic_technician_alias: "$job_catalytic_technician$"
+	concept_tec_specialist_job_catalytic_technician_icon: "£job_catalytic_technician£ $job_catalytic_technician$"
+	concept_tec_specialist_job_catalytic_technician_plural: "$job_catalytic_technician_plural$"
+	concept_tec_specialist_job_catalytic_technician_plural_icon: "£job_catalytic_technician£ $job_catalytic_technician_plural$"
+	concept_tec_specialist_job_catalytic_technician_desc: "§L$job_catalytic_technician_desc$§!\n\n$job_catalytic_technician_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_artificer: "$job_artificer$"
+	concept_tec_specialist_job_artificer_alias: "$job_artificer$"
+	concept_tec_specialist_job_artificer_icon: "£job_artificer£ $job_artificer$"
+	concept_tec_specialist_job_artificer_plural: "$job_artificer_plural$"
+	concept_tec_specialist_job_artificer_plural_icon: "£job_artificer£ $job_artificer_plural$"
+	concept_tec_specialist_job_artificer_desc: "§L$job_artificer_desc$§!\n\n$job_artificer_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+
 	concept_tec_specialist_job_tec_geneticist: "$job_tec_geneticist$"
 	concept_tec_specialist_job_tec_geneticist_alias: "$job_tec_geneticist$"
 	concept_tec_specialist_job_tec_geneticist_icon: "£job_tec_geneticist£ $job_tec_geneticist$"
@@ -518,7 +540,21 @@
 	concept_tec_specialist_job_tec_landowner_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
 	concept_tec_specialist_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_duelist: "$job_duelist$"
+	concept_tec_specialist_job_duelist_alias: "$job_duelist$"
+	concept_tec_specialist_job_duelist_icon: "£job_duelist£ $job_duelist$"
+	concept_tec_specialist_job_duelist_plural: "$job_duelist_plural$"
+	concept_tec_specialist_job_duelist_plural_icon: "£job_duelist£ $job_duelist_plural$"
+	concept_tec_specialist_job_duelist_desc: "§L$job_duelist_desc$§!\n\n$job_duelist_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_death_chronicler: "$job_death_chronicler$"
+	concept_tec_specialist_job_death_chronicler_alias: "$job_death_chronicler$"
+	concept_tec_specialist_job_death_chronicler_icon: "£job_death_chronicler£ $job_death_chronicler$"
+	concept_tec_specialist_job_death_chronicler_plural: "$job_death_chronicler_plural$"
+	concept_tec_specialist_job_death_chronicler_plural_icon: "£job_death_chronicler£ $job_death_chronicler_plural$"
+	concept_tec_specialist_job_death_chronicler_desc: "§L$job_death_chronicler_desc$§!\n\n$job_death_chronicler_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	# Drones
 	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
 	concept_tec_specialist_job_bath_attendant_hive_alias: "$job_bath_attendant_hive$"
 	concept_tec_specialist_job_bath_attendant_hive_icon: "£job_bath_attendant_hive£ $job_bath_attendant_hive$"
@@ -540,6 +576,26 @@
 	concept_tec_specialist_job_tec_scavenger_drone_plural_icon: "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$"
 	concept_tec_specialist_job_tec_scavenger_drone_desc: "§L$job_tec_scavenger_drone_desc$§!\n\n$job_tec_scavenger_drone_effect_desc_civic$\n\nStratum: §Y$pop_cat_complex_drone$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_tec_catalytic_drone: "$job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_alias: "$job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_icon: "£job_tec_catalytic_drone£ $job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_plural: "$job_tec_catalytic_drone_plural$"
+	concept_tec_specialist_job_tec_catalytic_drone_plural_icon: "£job_tec_catalytic_drone£ $job_tec_catalytic_drone_plural$"
+	concept_tec_specialist_job_tec_catalytic_drone_desc: "§L$job_tec_catalytic_drone_desc$§!\n\n$job_tec_catalytic_drone_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_catalytic_drone_machine: "$job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_machine_alias: "$job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_machine_icon: "£job_tec_catalytic_drone£ $job_tec_catalytic_drone$"
+	concept_tec_specialist_job_tec_catalytic_drone_machine_plural: "$job_tec_catalytic_drone_plural$"
+	concept_tec_specialist_job_tec_catalytic_drone_machine_plural_icon: "£job_tec_catalytic_drone£ $job_tec_catalytic_drone_plural$"
+	concept_tec_specialist_job_tec_catalytic_drone_machine_desc: "§L$job_tec_catalytic_drone_desc$§!\n\n$job_tec_catalytic_drone_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_geneticist_drone: "$job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_alias: "$job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_icon: "£job_tec_geneticist£ $job_tec_geneticist_drone$"
+	concept_tec_specialist_job_tec_geneticist_drone_plural: "$job_tec_geneticist_drone_plural$"
+	concept_tec_specialist_job_tec_geneticist_drone_plural_icon: "£job_tec_geneticist£ $job_tec_geneticist_drone_plural$"
+	concept_tec_specialist_job_tec_geneticist_drone_desc: "§L$job_tec_geneticist_drone_desc$§!\n\n$job_tec_geneticist_drone_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
 	concept_tec_specialist_job_tec_geneticist_drone: "$job_tec_geneticist_drone$"
 	concept_tec_specialist_job_tec_geneticist_drone_alias: "$job_tec_geneticist_drone$"
@@ -562,21 +618,21 @@
 	concept_tec_worker_job_tec_necromonger_icon: "£job_tec_necromonger£ $job_tec_necromonger$"
 	concept_tec_worker_job_tec_necromonger_plural: "$job_tec_necromonger_plural$"
 	concept_tec_worker_job_tec_necromonger_plural_icon: "£job_tec_necromonger£ $job_tec_necromonger_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_necromonger_desc$§!\n\n$job_tec_necromonger_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_necromonger_desc: "§L$job_tec_necromonger_desc$§!\n\n$job_tec_necromonger_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_mortal_initiate: "$job_mortal_initiate$"
 	concept_tec_worker_job_mortal_initiate_alias: "$job_mortal_initiate$"
 	concept_tec_worker_job_mortal_initiate_icon: "£job_mortal_initiate£ $job_mortal_initiate$"
 	concept_tec_worker_job_mortal_initiate_plural: "$job_mortal_initiate_plural$"
 	concept_tec_worker_job_mortal_initiate_plural_icon: "£job_mortal_initiate£ $job_mortal_initiate_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_mortal_initiate_desc$§!\n\n$job_mortal_initiate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_mortal_initiate_desc: "§L$job_mortal_initiate_desc$§!\n\n$job_mortal_initiate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_pleasure_giver: "$job_tec_pleasure_giver$"
 	concept_tec_worker_job_tec_pleasure_giver_alias: "$job_tec_pleasure_giver$"
 	concept_tec_worker_job_tec_pleasure_giver_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
 	concept_tec_worker_job_tec_pleasure_giver_plural: "$job_tec_pleasure_giver_plural$"
 	concept_tec_worker_job_tec_pleasure_giver_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_pleasure_giver_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_druid: "$job_tec_druid$"
 	concept_tec_worker_job_tec_druid_alias: "$job_tec_druid$"
@@ -585,12 +641,26 @@
 	concept_tec_worker_job_tec_druid_plural_icon: "£job_tec_druid£ $job_tec_druid_plural$"
 	concept_tec_worker_job_tec_druid_desc: "§L$job_tec_druid_desc$§!\n\n$job_tec_druid_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
-	concept_tec_worker_job_tec_peasant: "$job_tec_peasant$"
-	concept_tec_worker_job_tec_peasant_alias: "$job_tec_peasant$"
-	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
-	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_memorialist: "$job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_alias: "$job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_plural: "$job_tec_memorialist_plural$"
+	concept_tec_worker_job_tec_memorialist_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
+	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_labrat: "$job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_alias: "$job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_icon: "£job_tec_labrat£ $job_tec_labrat$"
+	concept_tec_worker_job_tec_labrat_plural: "$job_tec_labrat_plural$"
+	concept_tec_worker_job_tec_labrat_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
+	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_memorialist_drone: "$job_tec_memorialist_drone$"
+	concept_tec_worker_job_tec_memorialist_drone_alias: "$job_tec_memorialist_drone$"
+	concept_tec_worker_job_tec_memorialist_drone_icon: "£job_tec_memorialist_drone£ $job_tec_memorialist_drone$"
+	concept_tec_worker_job_tec_memorialist_drone_plural: "$job_tec_memorialist_drone_plural$"
+	concept_tec_worker_job_tec_memorialist_drone_plural_icon: "£job_tec_memorialist_drone£ $job_tec_memorialist_drone_plural$"
+	concept_tec_worker_job_tec_memorialist_drone_desc: "§L$job_tec_memorialist_drone_desc$§!\n\n$job_tec_memorialist_drone_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
  # /
  # Unsorted
