--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -191,7 +191,7 @@
 		councilor_civic_tec_regular_evolutionary_architects:0 "High Evolutionary"
 		councilor_civic_tec_regular_evolutionary_architects_female:0 "$councilor_civic_tec_regular_evolutionary_architects$"
 		councilor_civic_tec_regular_evolutionary_architects_desc:0 "Heading a elite team of genetic engineers, the $TITLE$ tailors a new generation of improved, enhanced and better individuals."
-		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-2.5%§!"
+		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-2.5%§!\nEach 5 £council£ Levels:\n    Biological $species_trait_points_add$: §G+1§!"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
@@ -288,10 +288,10 @@
 		councilor_civic_tec_regular_high_priests_desc:0 "TO DO"
 		councilor_civic_tec_regular_high_priests_custom_modifier:0 "TO DO"
 
-		councilor_civic_tec_regular_commandantes:0 "TO DO"
-		councilor_civic_tec_regular_commandantes_female:0 "TO DO"
-		councilor_civic_tec_regular_commandantes_desc:0 "TO DO"
-		councilor_civic_tec_regular_commandantes_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_commanders:0 "TO DO"
+		councilor_civic_tec_regular_commanders_female:0 "TO DO"
+		councilor_civic_tec_regular_commanders_desc:0 "TO DO"
+		councilor_civic_tec_regular_commanders_custom_modifier:0 "TO DO"
 
 		councilor_civic_tec_regular_head_researchers:0 "TO DO"
 		councilor_civic_tec_regular_head_researchers_female:0 "TO DO"
@@ -361,7 +361,7 @@
 		councilor_civic_tec_regular_private_militaries:0 "Parabellum Contractor"
 		councilor_civic_tec_regular_private_militaries_female:0 "$councilor_civic_tec_regular_private_militaries$"
 		councilor_civic_tec_regular_private_militaries_desc:0 "All the process of recruit, administrate and direct mercenaries is overseen by the $TITLE$."
-		councilor_civic_tec_regular_private_militaries_custom_modifier:0 "$tec_loc_trade_value$ from £job_mercenary£ $job_mercenary_plural$: §G+$@councilor_civic_tec_regular_private_militaries_bonus$§!"
+		councilor_civic_tec_regular_private_militaries_custom_modifier:0 "$tec_loc_trade_value$ from £job_tec_mercenary£ $job_tec_mercenary_plural$: §G+$@councilor_civic_tec_regular_private_militaries_bonus$§!"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_spiritual_seekers:0 "Seeker of Truth"
@@ -376,7 +376,7 @@
 
 	# /
 	# Basic civics
-		councilor_civic_tec_regular_capitalized_innovation:0 "Scientific Mogul"
+		councilor_civic_tec_regular_capitalized_innovation:0 "Scientific tec_mogul"
 		councilor_civic_tec_regular_capitalized_innovation_female:0 "$councilor_civic_tec_regular_capitalized_innovation$"
 		councilor_civic_tec_regular_capitalized_innovation_desc:0 "The $TITLE$ has prowess on scientific and economic affairs, serving as link between private research industries and the empire itself."
 		councilor_civic_tec_regular_capitalized_innovation_custom_modifier:0 "NOT USED"
