More concepts and compressing of requirements, occultists modifiers

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -156,6 +156,9 @@
 	civic_tooltip_tec_main_cult_block: "Does not have a £job_priest£ ['concept_tec_main_cult_civic']."
 	civic_tooltip_tec_secondary_cult_block: "Does not have a £job_priest£ ['concept_tec_secondary_cult_civic']."
 	civic_tooltip_tec_artifical_origin_block: "Does not have a §YArtificial Planet§! Origin."
+	civic_tooltip_tec_cluster_block: "Does not have a £tec_civic_ruler£['concept_tec_cluster_civic']."
+	civic_tooltip_tec_directive_block: "Does not have a £tec_civic_ruler_add£['concept_tec_directive_civic']."
+	civic_tooltip_tec_brood_block: "Does not have a £tec_civic_ruler£['concept_tec_brood_capital_civic']."
  # /
 
  # Order
@@ -301,7 +304,7 @@
  # --------------- Life Seeded
 	civic_tec_origin_gaia_affinity:0 "§E£tec_civic_origin£§!Life Affinity"
 	civic_tec_origin_gaia_affinity_desc:0 "§ELife-Seeded ['concept_tec_origin_civic']§!\n\nBorn to a paradise of a kind seldom seen, this civilization retains a deep, inherent connection to the wonders of the purest planets in the universe"
-	civic_tec_origin_gaia_affinity_tooltip:0 "$tec_loc_c_unlocks_trait$ §H£pop£ $trait_tec_natural_sync$§!\nThe £pop£ $trait_tec_natural_sync$ trait makes each pop increase §G£job£ Pop output on Gaia Worlds§!, and increases §G$tec_loc_pop_growth$§! while inhabiting a £planet£ §YGaia§! world, or any £planet£ §YPerfect§! planet.\n\n$tec_loc_c_unlocks_feature$ §HShaped Synchrony§!\nUnlocking the £unity£ §Y$ap_world_shaper$§! Ascension Perk §Gamplifies§! the effects of the $trait_tec_natural_sync$ trait.\n§RNon-Perfect world colonies require forced pop growth.§!\n\n$tec_loc_c_warning$ §HTied to Perfection§!\n$trait_tec_natural_sync$ pops inhabiting other kind of planets, or arcologies, suffer §RSEVERE§! penalties, equivalent to the inverse of the trait bonuses.\n§RNon-Perfect world colonies require forced pop growth.§!\n" 
+	civic_tec_origin_gaia_affinity_tooltip:0 "$tec_loc_c_unlocks_trait$ §H£pop£ $trait_tec_natural_sync$§!\nThe £pop£ $trait_tec_natural_sync$ trait makes each pop increase §G£job£ Pop output on Gaia Worlds§!, and increases §G$tec_loc_pop_growth$§! while inhabiting a £planet£ §YGaia§! world, or any £planet£ §YPerfect§! planet.\n\n$tec_loc_c_unlocks_feature$ §HShaped Synchrony§!\nUnlocking the £unity£ §Y$ap_world_shaper$§! Ascension Perk §Gamplifies§! the effects of the $trait_tec_natural_sync$ trait.\n\n$tec_loc_c_warning$ §HTied to Perfection§!\n$trait_tec_natural_sync$ pops inhabiting other kind of planets, or arcologies, suffer §RSEVERE§! penalties, equivalent to the inverse of the trait bonuses.\n§RNon-Perfect world colonies require forced pop growth.§!\n"
 		#OLD_civic_tec_origin_gaia_affinity_tooltip:0 "Members of this species gains the §HNatural Synchrony§! trait while inhabiting a §GGaia§! world, or any §HPerfectly designed§! planet; This trait increases population growth and output.\n\n§YInhabiting other kind of planets, or arcologies, would §Rseriously harm§! them.§!\n\n§RNon-Perfect world colonies requires forced pop growth.§!\n\n" 
  
 	civic_tec_origin_gaia_children:0 "§E£tec_civic_origin£§!Children of Gaia"
@@ -713,7 +716,7 @@
 	# former civic_political_pluralism
 	civic_tec_regular_political_virtue:0 "§L£tec_civic_feature£§!Political Virtue"
 	civic_tec_regular_political_virtue_desc:0 "['concept_tec_feature_civic']\n\nThe true political discussion must be centered around the idea of ''virtue'', with an ordinary citizen being primarily concerned with the matters of the State as ''public affair'', and generally involved in the political life at some level."
-	civic_tec_regular_political_virtue_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£unity£ Political Virtue§!\nFactions above §Y50%§! approval rate will produce §Gadditional resources§! based on the faction type.\nEffects increased a §Y20%§! for factions tied to the ruling ethics."
+	civic_tec_regular_political_virtue_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£unity£ Political Virtue§!\nFactions above §Y50%§! approval rate will produce §Gadditional resources§! based on the faction type.\nEffects increased a §Y20%§! for factions tied to the ruling ethics.\n\n$tec_loc_c_modifiers$"
 		#OLD_civic_tec_regular_political_virtue_tooltip:0 "Factions above §Y50%§! approval rate will produce §Gadditional resources§! based on the faction type.\nEffects increased a §Y20%§! for factions tied to the ruling ethics."
 
 	# former civic_keepers_harmony
@@ -803,7 +806,7 @@
 	# former civic_personality_cult
 	civic_tec_regular_cult_personality:0 "§L£tec_civic_leader£§!Cult of Personality"
 	civic_tec_regular_cult_personality_desc:0 "['concept_tec_leader_civic']\n\nThe head of state is seen as an infallible paragon and this notion, imagined or not, is heavily enforced throughout the state."
-	civic_tec_regular_cult_personality_tooltip:0 "Each two times the empire unlocks an ascension perk, the §YRuler§! will gain a §Ylevel§! or an additional §Ytrait§!, alternatively.\nBased on the empire technologies and ascension path, the empire will gain ways of protecting and extending the life of the Ruler.\n"
+	civic_tec_regular_cult_personality_tooltip:0 "Each two times the empire unlocks an ascension perk, the §YRuler§! will gain a §Ylevel§! or an additional §Ytrait§!, alternatively.\nBased on the empire technologies and ascension path, the empire will gain ways of protecting and extending the life of the Ruler.\n\n$tec_loc_c_modifiers$"
  # /
  # Evolved
 	civic_tec_regular_research_council:0 "§M£tec_civic_leader£§!Research Council"
